# leeriya

./: .gitignore  README.md
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/audio/: PcmAudioEngine.ts
client/src/components/: BottomSheet.tsx  PromptFaders.tsx  TopBar.tsx
client/src/hooks/: useRoomSession.test.ts  useRoomSession.ts
client/src/lib/: api.ts  scales.ts  types.ts
client/src/styles/: global.css
client/src/visualizer/: LiquidBlob.tsx
docs/: V1buildplan.md  architecture.md  idea.md  latency-tuning.md  local-runbook.md
infra/: fly.toml
server/: .env.example  Dockerfile  README.md  pyproject.toml
server/app/: config.py  lyria.py  main.py  models.py  room_manager.py  token_utils.py
server/lyeria_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: test_api.py  test_room_manager.py  test_token_utils.py
shared/: contracts.md
